--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,14 @@
 <html>
-<body style="background-color:powderblue;">
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>Web Application Programming</title>
+    </head>
+<body>
+    <header class="header" id="top">
+        <a href="Home.html">Home</a>
+        <a href="About.html">About</a>
+        <a href="Contact.html">Contacts</a>
+    </header>  
 <form>
 <fieldset>
 <legend>Personal Details:</legend>
@@ -27,5 +36,9 @@ Gender:
 <button type="button" onclick="alert('Thanks For Taking This Survey!')">Click Me!</button>
 <input type="submit" value="submit">
 </form>
+<footer>
+    <p>copyright @freddy</p>
+    <a href="nyangaufredrick443@gmail.com">nyangaufredrick443@gmail.com</a>
+</footer>
 </body>
 </html>
