--- a/About.html
+++ b/About.html
@@ -4,6 +4,11 @@
 <title>RESUME | FREDRICK NYANG'AU</title> 
 </head>
 <body>
+    <header class="header" id="top">
+        <a href="Home.html">Home</a>
+        <a href="About.html">About</a>
+        <a href="Contact.html">Contacts</a>
+    </header>
 <div id="resume">
 <h1>Fredrick Nyang'au</h1>
 <h2>4242 Tom Mboya Road</h2>
