--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,7 @@
 <header class="header" id="top">
     <a href="Home.html">Home</a>
     <a href="About.html">About</a>
+    <a href="Contact.html">Contacts</a>
 </header>
 <h2>BASIC WEBSITE</h2>
 <p>welcome to my first website page</p>
