--- a/Home.html
+++ b/Home.html
@@ -37,6 +37,43 @@ Gender:
 <input type="submit" value="submit">
 </form>
 <footer>
+    <div class="container">
+        <a href="#">
+            <div class="section facebook" tooltip="Facebook">
+                <div class="icon">
+                    <i class="fab fa-facebook-f fa-lg"></i>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="section instagram" tooltip="Instagram">
+                <div class="icon">
+                    <i class="fab fa-instagram fa-lg"></i>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="section youtube" tooltip="Youtube">
+                <div class="icon">
+                    <i class="fab fa-youtube fa-lg"></i>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="section twitter" tooltip="Twitter">
+                <div class="icon">
+                    <i class="fab fa-twitter fa-lg"></i>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="section github" tooltip="Github">
+                <div class="icon">
+                    <i class="fab fa-github fa-lg"></i>
+                </div>
+            </div>
+        </a>
+    </div>
     <p>copyright @freddy</p>
     <a href="nyangaufredrick443@gmail.com">nyangaufredrick443@gmail.com</a>
 </footer>
