--- a/About.html
+++ b/About.html
@@ -34,5 +34,9 @@ practice
 in Information Technology.
 </li>
 </ul>
+<footer>
+    <p>copyright @freddy</p>
+    <a href="nyangaufredrick443@gmail.com">nyangaufredrick443@gmail.com</a>
+</footer>
 </body>
 </html>
