--- a/Home.html
+++ b/Home.html
@@ -37,8 +37,47 @@ Gender:
 <input type="submit" value="submit">
 </form>
 <footer>
-    <p>copyright @freddy</p>
-    <a href="nyangaufredrick443@gmail.com">nyangaufredrick443@gmail.com</a>
+    <div class="footer">
+        <div class="heading">
+          <h2>freddy<sup>™</sup></h2>
+        </div>
+        <div class="content">
+          <div class="services">
+            <h4>Services</h4>
+            <p>App development</p>
+            <p>Web development</p>
+            <p>Web designing</p>
+          </div>
+          <div class="social-media">
+            <h4>Social</h4>
+            <p>
+              <a href="https://Linkedin.com/">Linkedin</a>
+            </p>
+            <p>
+              <a href="https://twitter.com/"> Twitter</a>
+            </p>
+            <p>
+              <a href="https://github.com/"> Github</a>
+            </p>
+            <p>
+              <a href="https://www.facebook.com/"> Facebook</a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/">Instagram</a>
+            </p>
+          </div>
+          <div class="details">
+            <h4 class="mobile">Mobile</h4>
+            <p>+254-746730585</p>
+            <h4 class="mail">Email</h4>
+            <p>nyangaufredrick443@gmail.com</p>
+          </div>
+        </div>
+        <footer>
+          <hr />
+          © 2023
+        </footer>
+      </div>
 </footer>
 </body>
 </html>
