--- a/Home.html
+++ b/Home.html
@@ -44,27 +44,17 @@ Gender:
         <div class="content">
           <div class="services">
             <h4>Services</h4>
-            <p>App development</p>
-            <p>Web development</p>
-            <p>Web designing</p>
+            App development
+            Web development
+            Web designing
           </div>
           <div class="social-media">
             <h4>Social</h4>
-            <p>
               <a href="https://Linkedin.com/">Linkedin</a>
-            </p>
-            <p>
-              <a href="https://twitter.com/"> Twitter</a>
-            </p>
-            <p>
+             <a href="https://twitter.com/"> Twitter</a>
               <a href="https://github.com/"> Github</a>
-            </p>
-            <p>
-              <a href="https://www.facebook.com/"> Facebook</a>
-            </p>
-            <p>
+             <a href="https://www.facebook.com/">Facebook</a>
               <a href="https://www.instagram.com/">Instagram</a>
-            </p>
           </div>
           <div class="details">
             <h4 class="mobile">Mobile</h4>
