--- a/Contacts.html
+++ b/Contacts.html
@@ -7,13 +7,11 @@
 <header class="header" id="top">
     <a href="Home.html">Home</a>
     <a href="About.html">About</a>
-    <a href="Contact.html">Contacts</a>
+    <a href="Contacts.html">Contacts</a>
 </header>
-<h2>BASIC WEBSITE</h2>
-<p>welcome to my first website page</p>
 <footer>
-    <p>copyright @freddy</p>
-    <a href="nyangaufredrick443@gmail.com">nyangaufredrick443@gmail.com</a>
+    <hr />
+    © 2023
 </footer>
     </body>
 </html>
