--- a/Home.html
+++ b/Home.html
@@ -1,83 +1,18 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Web Application Programming</title>
     </head>
 <body>
     <header class="header" id="top">
         <a href="Home.html">Home</a>
         <a href="About.html">About</a>
-        <a href="Contact.html">Contacts</a>
+        <a href="Contacts.html">Contacts</a>    
     </header>  
-<form>
-<fieldset>
-<legend>Personal Details:</legend>
-<label for="fname">First Name:</label><br>
-<input type="text" id="fname" name="fname"><br>
-<label for="sname">Second Name:</label><br>
-<input type="text" id="sname" name="sname"><br>
-<label for="email">Email:</label><br>
-<input type="text" id="email" name="email"><br>
-<p>
-Gender:
-<label><input type="radio" name="gender" value="male">Male</label>
-<label><input type="radio" name="gender" value="female">Female</label>
-</p>
-</fieldset><br>
-<label for="cars">Chose a car:</label>
-<select id="cars" name="cars">
-<option value="volvo">Volvo</option>
-<option value="audi">Audi</option>
-<option value="toyota">Toyota</option>
-<option value="benz">Benz</option>
-</select><br>
-<p>Give reasons why you chose this car</p>
-<textarea name="message" rows="10" cols="30"></textarea><br><br>
-<button type="button" onclick="alert('Thanks For Taking This Survey!')">Click Me!</button>
-<input type="submit" value="submit">
-</form>
+    <h2>BASIC WEBSITE</h2>
+<p>welcome to my first website page</p>
 <footer>
-    <div class="footer">
-        <div class="heading">
-          <h2>freddy<sup>™</sup></h2>
-        </div>
-        <div class="content">
-          <div class="services">
-            <h4>Services</h4>
-            <p>App development</p>
-            <p>Web development</p>
-            <p>Web designing</p>
-          </div>
-          <div class="social-media">
-            <h4>Social</h4>
-            <p>
-              <a href="https://Linkedin.com/">Linkedin</a>
-            </p>
-            <p>
-              <a href="https://twitter.com/"> Twitter</a>
-            </p>
-            <p>
-              <a href="https://github.com/"> Github</a>
-            </p>
-            <p>
-              <a href="https://www.facebook.com/"> Facebook</a>
-            </p>
-            <p>
-              <a href="https://www.instagram.com/">Instagram</a>
-            </p>
-          </div>
-          <div class="details">
-            <h4 class="mobile">Mobile</h4>
-            <p>+254-746730585</p>
-            <h4 class="mail">Email</h4>
-            <p>nyangaufredrick443@gmail.com</p>
-          </div>
-        </div>
-        <footer>
-          <hr />
-          © 2023
-        </footer>
-      </div>
+<hr />
+© 2023
 </footer>
 </body>
 </html>
