--- a/Home.html
+++ b/Home.html
@@ -3,75 +3,73 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <header class="header" id="top">
-        <a href="Home.html">Home</a>
-        <a href="About.html">About</a>
-        <a href="Contact.html">Contacts</a>
-    </header>  
-<form>
-<fieldset>
-<legend>Personal Details:</legend>
-<label for="fname">First Name:</label><br>
-<input type="text" id="fname" name="fname"><br>
-<label for="sname">Second Name:</label><br>
-<input type="text" id="sname" name="sname"><br>
-<label for="email">Email:</label><br>
-<input type="text" id="email" name="email"><br>
-<p>
-Gender:
-<label><input type="radio" name="gender" value="male">Male</label>
-<label><input type="radio" name="gender" value="female">Female</label>
-</p>
-</fieldset><br>
-<label for="cars">Chose a car:</label>
-<select id="cars" name="cars">
-<option value="volvo">Volvo</option>
-<option value="audi">Audi</option>
-<option value="toyota">Toyota</option>
-<option value="benz">Benz</option>
-</select><br>
-<p>Give reasons why you chose this car</p>
-<textarea name="message" rows="10" cols="30"></textarea><br><br>
-<button type="button" onclick="alert('Thanks For Taking This Survey!')">Click Me!</button>
-<input type="submit" value="submit">
-</form>
-<footer>
-    <div class="footer">
-        <div class="heading">
-          <h2>freddy<sup>™</sup></h2>
+    <header class="header" id="top"> 
+        <image class="logo" src="Logo.jpg.jpg">
+        <h1>Trade_With_Freddy Forex Academy</h1>
+        <nav>
+        <ul>
+            <a href="Home.html">Home</a>
+            <a href="About.html">About</a>
+            <a href="Contact.html">Contacts</a>
+        </ul>
+        </nav>
+        </header><br><br>
+        <main>
+        <section class="banner">
+        <h2>Welcome to Trade_With_Freddy Forex Academy</h2><br>
+        <p>Learn to trade forex like a pro with our comprehensive courses.</p>
+        <a href="#" class="button">Enroll Now</a>
+        </section><br>
+        <section class="features">
+        <h2>Why Choose Trade_With_Freddy Forex Academy?</h2><br>
+        <div class="feature">
+        <img src="icon 1.jpg.jpg" alt="Feature 1">
+        <h3>Expert Instructors</h3>
+        <p>Our instructors are experienced traders with years of knowledge and expertise.</p>
         </div>
-        <div class="content">
-          <div class="services">
-            <h4>Services</h4>
-            <p>App development</p>
-            <p>Web development</p>
-            <p>Web designing</p>
-          </div>
-          <div class="social-media">
-            <h4>Social</h4>
-            <p>
-              <a href="https://Linkedin.com/">Linkedin</a>
-            </p>
-            <p>
-              <a href="https://twitter.com/"> Twitter</a>
-            </p>
-            <p>
-              <a href="https://github.com/"> Github</a>
-            </p>
-            <p>
-              <a href="https://www.facebook.com/"> Facebook</a>
-            </p>
-            <p>
-              <a href="https://www.instagram.com/">Instagram</a>
-            </p>
-          </div>
-          <div class="details">
-            <h4 class="mobile">Mobile</h4>
-            <p>+254-746730585</p>
-            <h4 class="mail">Email</h4>
-            <p>nyangaufredrick443@gmail.com</p>
-          </div>
+        <div class="feature">
+        <img src="icon 2.jpg.jpg" alt="Feature 2">
+        <h3>Comprehensive Courses</h3>
+        <p>Our courses cover everything you need to know to trade forex successfully.</p>
         </div>
+        <div class="feature">
+        <img src="icon 3.jpg.jpg" alt="Feature 3">
+        <h3>Flexible Learning</h3>
+        <p>Learn at your own pace with our online courses, accessible from anywhere.</p>
+        </div>
+        </section>
+        <section class="courses">
+        <h2>Our Courses</h2><br>
+        <div class="course">
+        <img src="course 1.jpg.jpg" alt="Course 1">
+        <h3>Forex Basics</h3><br>
+        <p>Learn the fundamentals of forex trading, including market analysis and risk management.</p>
+        <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="course">
+        <img src="course 2.jpg.jpg" alt="Course 2">
+        <h3>Technical Analysis</h3><br>
+        <p>Discover how to use charts and indicators to analyze the forex market and make informed trading decisions.</p>
+        <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="course">
+        <img src="course 3.jpg.jpg" alt="Course 3">
+        <h3>Advanced Strategies</h3><br>
+        <p>Take your trading to the next level with advanced strategies for maximizing profits and minimizing risks.</p>
+        <a href="#" class="button">Learn More</a>
+        </div>
+        </section>
+    </main>
+    <footer>
+    <div class="footer-content">
+    <p>Trade_With_Freddy Forex Academy &copy; 2023. All rights reserved.</p>
+    <nav>
+    <ul>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Terms of Service</a>
+    </ul>
+    </nav>
+    </div>
         <footer>
           <hr />
           © 2023
