--- a/About.html
+++ b/About.html
@@ -4,11 +4,17 @@
 <title>RESUME | FREDRICK NYANG'AU</title> 
 </head>
 <body>
-    <header class="header" id="top">
-        <a href="Home.html">Home</a>
-        <a href="About.html">About</a>
-        <a href="Contact.html">Contacts</a>
-    </header>
+    <header class="header" id="top"> 
+        <image class="logo" src="Logo.jpg.jpg">
+        <h1>Trade_With_Freddy Forex Academy</h1>
+        <nav>
+        <ul>
+            <a href="Home.html">Home</a>
+            <a href="About.html">About</a>
+            <a href="Contacts.html">Contacts</a>
+        </ul>
+        </nav>
+        </header>
 <div id="resume">
 <h1>Fredrick Nyang'au</h1>
 <h2>4242 Tom Mboya Road</h2>
@@ -34,9 +40,26 @@ practice
 in Information Technology.
 </li>
 </ul>
-<footer>
-    <p>copyright @freddy</p>
-    <a href="nyangaufredrick443@gmail.com">nyangaufredrick443@gmail.com</a>
+<footer>  
+    <div class="footer-content">
+    <p>Trade_With_Freddy Forex Academy &copy; 2023. All rights reserved.</p>
+    <nav>
+    <ul>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Terms of Service</a>
+    </ul>
+    </nav>
+    <div class="social-media">
+            <a href="#">facebook</a>
+            <a href="#">instagram</a>
+            <a href="#">youtube</a>
+    </div>
+    </div>
+        <footer>
+          <hr />
+          © 2023
+        </footer>
+      </div>
 </footer>
 </body>
 </html>
