--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,7 @@
         <ul>
             <a href="Home.html">Home</a>
             <a href="About.html">About</a>
-            <a href="Contact.html">Contacts</a>
+            <a href="Contacts.html">Contacts</a>
         </ul>
         </nav>
         </header><br><br>
@@ -60,7 +60,7 @@
         </div>
         </section>
     </main>
-    <footer>
+    <footer>  
     <div class="footer-content">
     <p>Trade_With_Freddy Forex Academy &copy; 2023. All rights reserved.</p>
     <nav>
@@ -69,6 +69,11 @@
     <a href="#">Terms of Service</a>
     </ul>
     </nav>
+    <div class="social-media">
+            <a href="#">facebook</a>
+            <a href="#">instagram</a>
+            <a href="#">youtube</a>
+    </div>
     </div>
         <footer>
           <hr />
