--- a/Contacts.html
+++ b/Contacts.html
@@ -9,7 +9,7 @@
         <h1>Trade_With_Freddy Forex Academy</h1>
         <nav>
         <ul>
-            <a href="Home.html">Home</a>
+            <a href="Index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Contacts.html">Contacts</a>
         </ul>
