--- a/Contacts.html
+++ b/Contacts.html
@@ -20,7 +20,7 @@ const name = prompt("Please enter your name:");
 const email = prompt("Please enter your email:");
 const phone = prompt("Please enter your phone number:");
 alert("Contact information saved successfully!");
-location.href = "Home.html";
+location.href = "index.html";
         </script>
 <footer>  
     <div class="footer-content">
