--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <section class="features">
         <h2>Why Choose Trade_With_Freddy Forex Academy?</h2><br>
         <div class="feature">
-        <img src="icon 1.jpg.jpg">
+        <img src="Icon 1.jpg.jpg">
         <h3>Expert Instructors</h3>
         <p>Our instructors are experienced traders with years of knowledge and expertise.</p>
         </div>
         <div class="feature">
-        <img src="icon 2.jpg.jpg">
+        <img src="Icon 2.jpg.jpg">
         <h3>Comprehensive Courses</h3>
         <p>Our courses cover everything you need to know to trade forex successfully.</p>
         </div>
         <div class="feature">
-        <img src="icon 3.jpg.jpg">
+        <img src="Icon 3.jpg.jpg">
         <h3>Flexible Learning</h3>
         <p>Learn at your own pace with our online courses, accessible from anywhere.</p>
         </div>
@@ -41,19 +41,19 @@
         <section class="courses">
         <h2>Our Courses</h2><br>
         <div class="course">
-        <img src="course 1.jpg.jpg">
+        <img src="Course 1.jpg.jpg">
         <h3>Forex Basics</h3><br>
         <p>Learn the fundamentals of forex trading, including market analysis and risk management.</p>
         <a href="#" class="button">Learn More</a>
         </div>
         <div class="course">
-        <img src="course 2.jpg.jpg">
+        <img src="Course 2.jpg.jpg">
         <h3>Technical Analysis</h3><br>
         <p>Discover how to use charts and indicators to analyze the forex market and make informed trading decisions.</p>
         <a href="#" class="button">Learn More</a>
         </div>
         <div class="course">
-        <img src="course 3.jpg.jpg">
+        <img src="Course 3.jpg.jpg">
         <h3>Advanced Strategies</h3><br>
         <p>Take your trading to the next level with advanced strategies for maximizing profits and minimizing risks.</p>
         <a href="#" class="button">Learn More</a>
