--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
                 <h1>About Our Forex Academy</h1>
             </header>
             <main>
-                <img src="course 3.jpg.jpg" alt="Forex Trading">
+                <img src="Course 3.jpg.jpg" alt="Forex Trading">
                 <h2>Our Mission</h2>
                 <p>At our Forex Academy, our mission is to provide high-quality education and training to help our students become successful traders. We are committed to empowering traders with the knowledge, skills, and resources they need to achieve their goals and improve their financial well-being.</p>
                 
