--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
     </ul>
     </nav>
     <div class="social-media">
-            <a href="#">facebook</a>
-            <a href="#">instagram</a>
-            <a href="#">youtube</a>
-    </div>
+  <a href="https://www.facebook.com/" target="_blank" class="facebook">Facebook</a>
+  <a href="https://twitter.com/" target="_blank" class="twitter">Twitter</a>
+  <a href="https://www.instagram.com/" target="_blank" class="instagram">Instagram</a>
     </div>
         <footer>
           <hr />
