--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
         <ul>
             <a href="index.html">Home</a>
-            <a href="About.html">About</a>
-            <a href="Contacts.html">Contacts</a>
+            <a href="About.html" target="_blank">About</a>
+            <a href="Contacts.html" target="_blank">Contacts</a>
         </ul>
         </nav>
         </header><br><br>
