--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Trade_With_Freddy Forex Academy</h1>
         <nav>
         <ul>
-            <a href="index.html">Home</a>
+            <a href="index.html" target="_blank">Home</a>
             <a href="About.html" target="_blank">About</a>
             <a href="Contacts.html" target="_blank">Contacts</a>
         </ul>
