--- a/Contacts.html
+++ b/Contacts.html
@@ -11,9 +11,9 @@
         <h1>Trade_With_Freddy Forex Academy</h1>
         <nav>
         <ul>
-            <a href="index.html">Home</a>
-            <a href="About.html">About</a>
-            <a href="Contacts.html">Contacts</a>
+            <a href="index.html" target="_blank">Home</a>
+            <a href="About.html" target="_blank">About</a>
+            <a href="Contacts.html" target="_blank">Contacts</a>
         </ul>
         </nav>
         </header>
@@ -34,11 +34,11 @@ location.href = "index.html";
     </ul>
     </nav>
     <div class="social-media">
-            <a href="#">facebook</a>
-            <a href="#">instagram</a>
-            <a href="#">youtube</a>
+            <a href="https://www.facebook.com/" target="_blank" class="facebook">Facebook</a>
+  <a href="https://twitter.com/" target="_blank" class="twitter">Twitter</a>
+  <a href="https://www.instagram.com/" target="_blank" class="instagram">Instagram</a>
     </div>
-    </div>
+    <div>
         <footer>
           <hr />
           © 2023
