--- a/About.html
+++ b/About.html
@@ -89,6 +89,7 @@
   <a href="https://twitter.com/" target="_blank" class="twitter">Twitter</a>
   <a href="https://www.instagram.com/" target="_blank" class="instagram">Instagram</a>
     </div>
+<div>
         <footer>
           <hr />
           © 2023
