--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     </ul>
     </nav>
     <div class="social-media">
-  <a href="https://www.facebook.com/" target="_blank" class="facebook">Facebook</a>
-  <a href="https://twitter.com/" target="_blank" class="twitter">Twitter</a>
-  <a href="https://www.instagram.com/" target="_blank" class="instagram">Instagram</a>
+  <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
+  <a href="https://twitter.com/" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+  <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
     </div>
 <div>
         <footer>
