--- a/Contacts.html
+++ b/Contacts.html
@@ -34,9 +34,9 @@ location.href = "index.html";
     </ul>
     </nav>
     <div class="social-media">
-            <a href="https://www.facebook.com/" target="_blank" class="facebook">Facebook</a>
-  <a href="https://twitter.com/" target="_blank" class="twitter">Twitter</a>
-  <a href="https://www.instagram.com/" target="_blank" class="instagram">Instagram</a>
+            <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
+  <a href="https://twitter.com/" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+  <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
     </div>
     <div>
         <footer>
