--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+8<html>
     <head>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -66,6 +66,7 @@
     <footer>  
     <div class="footer-content">
     <p>Trade_With_Freddy Forex Academy &copy; 2023. All rights reserved.</p>
+</div>
     <nav>
     <ul>
     <a href="#">Privacy Policy</a>
@@ -78,11 +79,9 @@
   <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
     </div>
 <div>
-        <footer>
-          <hr />
+          <hr/>
           © 2023
-        </footer>
-      </div>
+</div>
 </footer>
 </body>
 </html>
