--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-8<html>
+<html>
     <head>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,12 +67,14 @@
     <div class="footer-content">
     <p>Trade_With_Freddy Forex Academy &copy; 2023. All rights reserved.</p>
 </div>
+<div>
     <nav>
     <ul>
     <a href="#">Privacy Policy</a>
     <a href="#">Terms of Service</a>
     </ul>
     </nav>
+</div>
     <div class="social-media">
   <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
   <a href="https://twitter.com/" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
