--- a/About.html
+++ b/About.html
@@ -68,23 +68,24 @@
 <footer>  
     <div class="footer-content">
     <p>Trade_With_Freddy Forex Academy &copy; 2023. All rights reserved.</p>
+</div>
+<div>
     <nav>
     <ul>
     <a href="#">Privacy Policy</a>
     <a href="#">Terms of Service</a>
     </ul>
     </nav>
+</div>
     <div class="social-media">
-     <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
+  <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
   <a href="https://twitter.com/" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
   <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
     </div>
 <div>
-        <footer>
-          <hr />
+          <hr/>
           © 2023
-        </footer>
-      </div>
+</div>
 </footer>
 </body>
 </html>
