--- a/About.html
+++ b/About.html
@@ -5,6 +5,34 @@
     <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" /> 
         <title>About Our Forex Academy</title>
+style>
+            h1 {
+                font-size: 36px;
+                margin-top: 0;
+                border-radius: 12px;
+            }
+            main {
+                max-width: 800px;
+                margin: 0 auto;
+                padding: 20px;
+                background-color: #fff;
+                box-shadow: 0px 5px 10px #ccc;
+                line-height: 1.5;
+            }
+            img {
+                max-width: 100%;
+                height: auto;
+                margin-bottom: 20px;
+                border-radius:50%;
+            }
+            h2 {
+                font-size: 24px;
+                margin-top: 30px;
+            }
+            p {
+                margin-bottom: 20px;
+            }
+        </style>
 </head>
 <body>
     <header class="header" id="top"> 
