--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" /> 
         <title>About Our Forex Academy</title>
-style>
+<style>
             h1 {
                 font-size: 36px;
                 margin-top: 0;
