--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header class="header" id="top"> 
         <image class="logo" src="Logo.jpg.jpg">
-        <h1>Trade_With_Freddy Forex Academy</h1>
+        <h1>Zeal Forex Traders Academy</h1>
         <nav>
         <ul>
             <a href="index.html" target="_blank">Home</a>
@@ -19,12 +19,12 @@
         </header><br><br>
         <main>
         <section class="banner">
-        <h2>Welcome to Trade_With_Freddy Forex Academy</h2><br>
+        <h2>Welcome to Zeal Forex Traders Academy</h2><br>
         <p>Learn to trade forex like a pro with our comprehensive courses.</p>
         <a href="#" class="button">Enroll Now</a>
         </section><br>
         <section class="features">
-        <h2>Why Choose Trade_With_Freddy Forex Academy?</h2><br>
+        <h2>Why Choose Zeal Forex Traders Academy?</h2><br>
         <div class="feature">
         <img src="Icon 1.jpg.jpg">
         <h3>Expert Instructors</h3>
@@ -65,7 +65,7 @@
     </main>
     <footer>  
     <div class="footer-content">
-    <p>Trade_With_Freddy Forex Academy &copy; 2023. All rights reserved.</p>
+    <p>Zeal Forex Traders Academy &copy; 2023. All rights reserved.</p>
 </div>
 <div>
     <nav>
@@ -76,9 +76,9 @@
     </nav>
 </div>
     <div class="social-media">
-  <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
-  <a href="https://twitter.com/" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-  <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+  <a href="https://youtube.com/@zealforextraders" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a>
+  <a href="https://twitter.com/zealforextrader?t=UBBjqeidFNrcD1DmuWa03w&s=09" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+  <a href="https://instagram.com/zealforextraders?igshid=NGExMmI2YTkyZg==" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
     </div>
 <div>
           <hr/>
