--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
 <body>
     <header class="header" id="top"> 
         <image class="logo" src="Logo.jpg.jpg">
-        <h1>Trade_With_Freddy Forex Academy</h1>
+        <h1>Zeal Forex Academy</h1>
         <nav>
         <ul>
             <a href="index.html" target="_blank">Home</a>
@@ -67,7 +67,7 @@
             </main>
 <footer>  
     <div class="footer-content">
-    <p>Trade_With_Freddy Forex Academy &copy; 2023. All rights reserved.</p>
+    <p>Zeal Forex Academy &copy; 2023. All rights reserved.</p>
 </div>
 <div>
     <nav>
